--- a/index.html
+++ b/index.html
@@ -5,47 +5,69 @@
     <title>Title</title>
 </head>
 <body>
-<a href="https://www.youtube.com/watch?v=DYed5whEf4g">Bones video</a>
-<br>
 
-<hr size ="10" noshade="">
+<h1>Surbhi's Portfolio</h1>
+<h2>I am a Software Engineer</h2>
+<hr/>
 
+<h3>
+    <a href="Personal.html">Surbhi's Personal stuff</a>
+</h3>
 
-<img src = "Images\MomentCam_20180113042428.gif" alt="surbhi is smashing the mirror">
+<img src="Images\WhatsApp Image 2023-04-19 at 7.25.48 PM.jpeg" height="200" alt="surbhi is sitting at restaurant">
 
-<img src = "Images\Surbhi_foto.jpg">
+<h4>Hobbies</h4>
+<ol>
+    <li>Hanging out with friends</li>
+    <li>Eating</li>
+    <li>Shopping</li>
+    <li>Dancing</li>
+    <li>Gyming</li>
+</ol>
 
-
-
-
-<hr>
-
-
+<h4>Academics</h4>
+<h5>Higher Education</h5>
 <ul>
-    <li>
-        <a href="ghttps://www.mistermobile.com.sg/product/samsung-s22-ultra-singapore/">Product Hunt</a>
-
-    </li>
-
-    <li>
-        <a href="ghttps://www.mistermobile.com.sg/product/samsung-s22-ultra-singapore/">Netflix</a>
-
-    </li>
-
-
-    <ul>
-        <li>apple</li>
-        <ol>
-            <li>red</li>
-            <li>blue</li>
-            <li>green</li>
-        </ol>
-        <li>orange</li>
-    </ul>
-    <li>def</li>
-    <li>ghi</li>
-    <li>xyz</li>
+    <li>B.E Computer science</li>
+    <li>MVJ college of Engineering</li>
+    <li>Bangalore</li>
 </ul>
+
+<h4>Work Experience</h4>
+<table border="4">
+    <tr>
+        <td>SAP client</td>
+        <td>Incture Technologies</td>
+        <td>IBM</td>
+    </tr>
+
+    <tr>
+        <td>3.5 years</td>
+        <td>6 months</td>
+        <td>1 year</td>
+    </tr>
+</table>
+
+    <h4>All time favorite hits</h4>
+    <h3>
+    <iframe width="500" height="200" src="https://www.youtube.com/embed/qoq8B8ThgEM" title="Tujh Mein Rab Dikhta Hai Song | Rab Ne Bana Di Jodi | Shah Rukh Khan, Anushka Sharma | Roop Kumar" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </br>
+        </br>
+        <iframe width="500" height="200" src="https://www.youtube.com/embed/Pm0Ga7R-vrM" title="Tujhe Kitna Chahne Lage (From &quot;Kabir Singh&quot;)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </h3>
+
+    <h4>Learnings links :</h4>
+    <a href="https://www.youtube.com/watch?v=ZA-tUyM_y7s&list=PLUl4u3cNGP63EdVPNLG3ToM6LaEUuStEY&index=1">Algo and Computation</a>
+    </br>
+    <a href="https://www.youtube.com/watch?v=Lx6ZTEUD4_E">Naveen Automation</a>
+    </br>
+    <a href="https://www.youtube.com/watch?v=5ygpvZbxA6w">Selenium</a>
+
+
+
+
+
+
 
 
 </body>
